Change context class and namespace
-- Change namespaces SimTaDyn becomes simtadyn
-- use namespace for menus (position name and array allocation) and move
menus inside editor classes.
-- Refresh SimTaDyn context class: SimTaDynContext becomes SimTaDyn.
Editor classes and Forth class go into SimTaDyn class (all important
classes will go here). SimTaDynContext is still a singleton class but
returns differently principal classes from SimTaDyn class.
-- Note: this is not totally race condition proof against Gtk::Main init
(meaning: some classes contains gtk widget and can be created before the
init of gtk making segfault in constructor).
-- Better management of shader filenames from SimTaDynContext.

--- a/src/Makefile
+++ b/src/Makefile
@@ -43,21 +43,21 @@ OBJECTS_TOOL     = Backward.o
 OBJECTS_COMMON   = Exception.o TextColor.o Color.o Vector3D.o Camera2D.o SharedLibrary_UNIX.o SharedLibrary.o
 OBJECTS_OPENGL   = OpenGL.o Shader.o Textures.o Fonts.o
 OBJECTS_RTREE    = BoundingBox.o RTreeNode.o RTreeIndex.o RTreeSplit.o
-OBJECTS_MAP      = BasicGraph.o SimTaDynGraph.o SimTaDynMap.o
+OBJECTS_MAP      = BasicGraph.o SimTaDynGraph.o SimTaDynMap.o MapEditor.o
 OBJECTS_LOADER   = ShapeFile.o
-OBJECTS_FORTH    = ForthExceptions.o ForthStream.o ForthDictionary.o ForthPrimitives.o Forth.o
-OBJECTS_GUI      = Redirection.o TextEditor.o ForthEditor.o MapEditor.o DrawingArea.o SimTaDynWindow.o
-OBJECTS_SIMTADYN = Renderer.o SimForth.o main.o
+OBJECTS_FORTH    = ForthExceptions.o ForthStream.o ForthDictionary.o ForthPrimitives.o Forth.o SimForth.o
+OBJECTS_GUI      = Redirection.o TextEditor.o ForthEditor.o DrawingArea.o SimTaDynWindow.o
+OBJECTS_SIMTADYN = Renderer.o main.o
 
 OBJECTS         = $(OBJECTS_TOOL) $(OBJECTS_COMMON) $(OBJECTS_OPENGL) $(OBJECTS_RTREE) \
-                  $(OBJECTS_MAP) $(OBJECTS_LOADER) $(OBJECTS_FORTH) $(OBJECTS_GUI) \
+                  $(OBJECTS_LOADER) $(OBJECTS_MAP) $(OBJECTS_FORTH) $(OBJECTS_GUI) \
                   $(OBJECTS_SIMTADYN)
 TARGET = SimTaDyn
 
 ###################################################
 # Compil options
 CXX = g++
-CXXFLAGS = -W -Wall -Wextra -O2 -g -std=c++11 `pkg-config --cflags gtkmm-3.0 gtksourceviewmm-3.0`
+CXXFLAGS = -W -Wall -Wextra -O0 -g -std=c++11 `pkg-config --cflags gtkmm-3.0 gtksourceviewmm-3.0`
 LDFLAGS = `pkg-config --libs gtkmm-3.0 gtksourceviewmm-3.0` -ldw
 DEFINES = -DCHECK_OPENGL
 
