--- a/src/Makefile
+++ b/src/Makefile
@@ -44,7 +44,7 @@ OBJECTS_COMMON   = Exception.o TextColor.o Color.o Vector3D.o Camera2D.o SharedL
 OBJECTS_OPENGL   = OpenGL.o Shader.o Textures.o Fonts.o
 OBJECTS_RTREE    = BoundingBox.o RTreeNode.o RTreeIndex.o RTreeSplit.o
 OBJECTS_MAP      = BasicGraph.o SimTaDynGraph.o SimTaDynMap.o MapEditor.o
-OBJECTS_LOADER   = ShapeFile.o
+OBJECTS_LOADER   = MapLoader.o ShapeFile.o
 OBJECTS_FORTH    = ForthExceptions.o ForthStream.o ForthDictionary.o ForthPrimitives.o Forth.o SimForth.o
 OBJECTS_GUI      = Redirection.o TextEditor.o ForthEditor.o DrawingArea.o SimTaDynWindow.o
 OBJECTS_SIMTADYN = Renderer.o main.o
