--- a/src/Makefile
+++ b/src/Makefile
@@ -47,7 +47,7 @@ OBJECTS_UTILS    = Singleton.o Resources.o ResourceManager.o Exception.o  Shared
 OBJECTS_COMMON   = File.o Color.o Vector3D.o Camera2D.o
 OBJECTS_FORTH    = TextColor.o ForthExceptions.o ForthStream.o ForthDictionary.o ForthPrimitives.o Forth.o
 OBJECTS_RTREE    = BoundingBox.o RTreeNode.o RTreeIndex.o RTreeSplit.o
-OBJECTS_MAP      = BasicGraph.o SimTaDynGraph.o SimTaDynMap.o
+OBJECTS_MAP      = BasicGraph.o SimTaDynGraph.o SimTaDynMap.o GraphAlgorithm.o
 OBJECTS_LOADER   = MapLoader.o ShapeFile.o
 OBJECTS_OPENGL   = OpenGL.o Shader.o Textures.o Fonts.o Renderer.o #Renderable.o
 OBJECTS_GUI      = Redirection.o TextEditor.o ForthEditor.o SimForth.o MapEditor.o DrawingArea.o SimTaDynWindow.o
