Update gtk hierarchy and add proto of the cell grap inspector
-- SimTaDynWindow.[ch]pp: move gtk boxes inside ForthEditor and
MapEditor.
-- ForthEditor.[ch]pp: clean gtk hierarchy.
-- MapEditor.[ch]pp: clean gtk hierarchy.
-- Inspector.[ch]pp: add a quick prototype for inspecting cell graph
contents (name, forth script).

--- a/src/Makefile
+++ b/src/Makefile
@@ -50,7 +50,7 @@ OBJECTS_RTREE    = BoundingBox.o RTreeNode.o RTreeIndex.o RTreeSplit.o
 OBJECTS_MAP      = BasicGraph.o SimTaDynGraph.o SimTaDynMap.o GraphAlgorithm.o
 OBJECTS_LOADER   = MapLoader.o ShapeFile.o
 OBJECTS_OPENGL   = OpenGL.o Shader.o Textures.o Fonts.o Renderer.o #Renderable.o
-OBJECTS_GUI      = Redirection.o TextEditor.o ForthEditor.o SimForth.o MapEditor.o DrawingArea.o SimTaDynWindow.o
+OBJECTS_GUI      = Redirection.o TextEditor.o ForthEditor.o SimForth.o Inspector.o MapEditor.o DrawingArea.o SimTaDynWindow.o
 OBJECTS_SIMTADYN =
 
 OBJECTS         = $(OBJECTS_TOOL) $(OBJECTS_UTILS) $(OBJECTS_COMMON) $(OBJECTS_FORTH) $(OBJECTS_RTREE) \
