Adding and updating OpenGL and container classes
-- Add the following OpenGL classes inheriting from GLObject class:
GLAttrib.[ch]pp: For getting shader attributes and uniforms. Note: need
to regex part of the sahder to get finer informations (will be done in
the future).
GLVertexArray.[ch]pp: for creating vertex array objects.

-- Update the following OpenGL classes:
GLObject.[ch]pp: replace the CPU id (uint) for a name (string). Can
Throw an exception when trying to use an not-init GL object. Move some
public methods in protected slot. Add isActivable() method. Add operator
int() to cast OpenGL object into the GPU reference for better interface
with OpenGL C routines.
GLShader.[ch]pp: change constructor and exception to take into account
the object name.
GLBuffer.[ch]pp: was renammed GLVertexBuffer.[ch]pp.

-- Containers: Add operator[] and add the method for counting the number
of elements in a block.

-- Renderer.cpp: update the example with new classes.
-- Update unit tests.

--- a/src/Makefile
+++ b/src/Makefile
@@ -49,7 +49,7 @@ OBJECTS_FORTH    = TextColor.o ForthExceptions.o ForthStream.o ForthDictionary.o
 OBJECTS_RTREE    = BoundingBox.o RTreeNode.o RTreeIndex.o RTreeSplit.o
 OBJECTS_MAP      = BasicGraph.o SimTaDynGraph.o SimTaDynMap.o GraphAlgorithm.o
 OBJECTS_LOADER   = MapLoader.o ShapeFile.o
-OBJECTS_OPENGL   = OpenGL.o GLObject.o GLBuffer.o GLShader.o Textures.o Fonts.o Renderer.o #Renderable.o
+OBJECTS_OPENGL   = OpenGL.o GLObject.o GLShader.o GLVertexArray.o GLAttrib.o Textures.o Fonts.o Renderer.o
 OBJECTS_GUI      = Redirection.o TextEditor.o ForthEditor.o SimForth.o Inspector.o MapEditor.o DrawingArea.o SimTaDynWindow.o
 OBJECTS_SIMTADYN =
 
