--- a/tests/Makefile
+++ b/tests/Makefile
@@ -26,7 +26,7 @@ INCLUDES = -I. -Icommon -Icells -Iopengl -I../src/Common -I../src/Common/Contain
 
 ###################################################
 # Path for Makefile to find *.o
-VPATH=.:$(BUILD):common:cells:opengl:../src/Common:../src/Common/Containers:-I../src/OpenGL:../src/SimTaDyn:../src/SimMap/Graph:../src/SimMap/RTree
+VPATH=.:$(BUILD):common:cells:opengl:../src/Common:../src/Common/Containers:../src/OpenGL:../src/SimTaDyn:../src/SimMap/Graph:../src/SimMap/RTree
 
 ###################################################
 # Set objects architecture specific
@@ -35,7 +35,7 @@ OBJECTS = \
 	Vector3D.o VectorTests.o \
 	Color.o ColorTests.o \
 	SetTests.o CollectionTests.o \
-	GLBufferTests.o \
+	Exception.o GLObject.o GLBufferTests.o \
 	main.o
 #	BoundingBox.o BoundingBoxTests.o
 
