Add Travis CI files
Get inspiration from https://github.com/tschoonj/gtkmm-plplot
while not working here because Travis CI has out of date Ubuntu version
with gtkm-3.8 and gtkmm/glarea appears with gtkm-3.18

--- a/src/Makefile
+++ b/src/Makefile
@@ -93,6 +93,11 @@ $(TARGET): $(OBJECTS)
 	@$(POSTCOMPILE)
 
 ###################################################
+# Check yaml syntax
+check-travis:
+	@travis lint ../.travis.yml
+
+###################################################
 # Clean Target
 clean:
 	@echo "*** Cleaning"
